[package]
name = "totp"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.12"
prost = "0.13"
tokio = { version = "1", features = ["full"] }
totp-rs = { version = "5.7", features = ["qr", "gen_secret"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
base32 = "0.5"
dotenvy = "0.15"
tonic-reflection = "0.12"

[build-dependencies]
tonic-build = "0.12"
